--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wallet">
     <img src="./images/wallet.png"/>
-    <div class="amount-added-text">Amount added</div>
+    <div class="amount-added-text" id="testnet">Amount added</div>
     <div class="date-text">Date</div>
     <div class="note-text">Note</div>
     <div class="instruction-text">
@@ -36,6 +36,7 @@
   </div>
   <div class="buttons">
     <button type="button" onclick="newripple()">Generate new</button>
+    <button type="button" onclick="newtest()">Generate Test</button>
     <button type="button" onClick="window.print()">Print</button>
   </div>
   <div class="instruction">
